crates/plan/tests/snapshots/fixtures__mongo_agg_unwind_act.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&mongo(&name))
---
MongoDb Actual
#0 $sort est=- act=760 loops=- self=0.0ms (0%)
  ! Sorts without an index (blocking sort in memory)
  #1 $project est=- act=760 loops=- self=0.0ms (0%)
    #2 $unwind est=- act=760 loops=- self=0.0ms (0%)
      #3 PROJECTION_SIMPLE est=- act=760 loops=- self=11.0ms (92%)
        #4 COLLSCAN on orders est=- act=760 loops=- self=1.0ms (8%)
          Filter: {"total":{"$gt":480}}
findings:
  Low FullScan node=Some(4): COLLSCAN on orders | Reads 20,000 rows. | db.orders.createIndex({ total: 1 })
  Low RowsRemovedByFilter node=Some(4): Filter discards 96% of rows at orders | Read 20,000 rows to return 760. | An index on the filtered columns lets the scan skip those rows.
