crates/plan/tests/snapshots/fixtures__mongo_collscan_est.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&mongo(&name))
---
MongoDb Estimated
#0 COLLSCAN on orders est=- act=- loops=-
  Filter: {"total":{"$gt":490}}
findings:
  Low FullScan node=Some(0): COLLSCAN on orders | Reads every row (the plan has no row counts). | db.orders.createIndex({ total: 1 })
