crates/plan/tests/snapshots/fixtures__mongo_covered_sort_act.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&mongo(&name))
---
MongoDb Actual
#0 PROJECTION_COVERED est=- act=20 loops=- self=0.0ms (0%)
  #1 IXSCAN on orders.customer_1_total_-1 est=- act=20 loops=- self=0.0ms (0%)
    Index Bounds: {"customer":["[7, 7]"],"total":["[MaxKey, MinKey]"]}
findings:
