crates/plan/tests/snapshots/fixtures__mongo_or_merge_est.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&mongo(&name))
---
MongoDb Estimated
#0 SUBPLAN est=- act=- loops=-
  #1 FETCH on orders est=- act=- loops=-
    #2 OR est=- act=- loops=-
      #3 IXSCAN on orders.status_1 est=- act=- loops=-
        Index Bounds: {"status":["[\"A\", \"A\"]"]}
      #4 IXSCAN on orders.customer_1_total_-1 est=- act=- loops=-
        Index Bounds: {"customer":["[3, 3]"],"total":["[MaxKey, MinKey]"]}
findings:
